<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.immoxz.run.MainActivity">

        <TextView
            android:id="@+id/accSensorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/accValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accSensorName"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/accMaxValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accValues"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/btnLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accMaxValues">

            <Button
                android:id="@+id/moveFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moveFile" />

            <Button
                android:id="@+id/delFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delFile" />

            <Button
                android:id="@+id/copyFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyFile" />
        </LinearLayout>

        <TextView
            android:id="@+id/dbPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLinear"
            android:layout_marginBottom="10dp" />

    </RelativeLayout>
</ScrollView>